# commodore-config-package-template

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter.json  packages.yaml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: pr.yaml  release.yaml  sync.yaml  sync_base.yaml  test.yaml
hooks/: post_gen_project.py
{{ cookiecutter.slug }}/: CONTRIBUTING.md  Makefile  Makefile.vars.mk  README.md  renovate.json
{{ cookiecutter.slug }}/.github/: changelog-configuration.json
{{ cookiecutter.slug }}/.github/workflows/: release.yaml  test.yaml
{{ cookiecutter.slug }}/docs/: antora.yml
{{ cookiecutter.slug }}/docs/modules/ROOT/pages/: index.adoc
