[tool.poetry]
name = "commodore-config-package-template"
version = "0.1.0"
description = ""
authors = ["VSHN AG <info@vshn.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
cruft = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
